fix bugs in encoding and text wrapping

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                                             ,"top":top_local
                                             ,"left":options.width
                                             ,"font-size":options.font_size_big
-                                            ,"whitespace":"nowrap"
+                                            ,"white-space":"nowrap"
                                  });
                 $("#"+fly_tmp_name).animate({left:-danmuPlayer.width()*3},options.speed
                     ,function(){$(this).remove();})
