--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>叶串2015-发送弹幕</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
