--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         $(document).ready(function() {
 
             var danmuss = {
-                1: [{"text": "hahahaha", "color": "red", "size": "0", "position": "0"},
+                1: [{"text": "哈哈哈", "color": "red", "size": "0", "position": "0"},
                     {"text": "233333", "color": "red", "size": "0", "position": "0"}],
                 3: [{"text": "poi", "color": "red", "size": "1", "position": "0"},
                     {"text": "2333", "color": "#FFFFFF", "size": "0", "position": "0"}],
@@ -76,11 +76,13 @@
 
             // the socket.io documentation recommends sending an explicit package upon connection
             // this is specially important when using the global namespace
-            var socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
+            var socket = io.connect('https://' + document.domain + ':' + location.port + namespace);
             socket.on('connect', function() {
-                socket.emit('my event', {data: 'I\'m connected!'});
+                console.log('connected');
             });
-
+            socket.on('disconnect',function(){
+                console.log('disconnected');
+            })
             // event handler for server sent data
             // the data is displayed in the "Received" section of the page
             socket.on('post danmu', function(msg) {
