--- a/templates/index.html
+++ b/templates/index.html
@@ -26,48 +26,26 @@
                 <div class="cover-container">
                     <div class="masthead clearfix">
                         <div class="inner">
-{#                            <h3 class="masthead-brand">Cover</h3>#}
-                            <ul class="nav masthead-nav" style="display:none">
-                                <li class="active">
-                                    <a href="#">Home</a>
-                                </li>
-                                <li>
-                                    <a href="#">Features</a>
-                                </li>
-                                <li>
-                                    <a href="#">Contact</a>
-                                </li>
-                            </ul>
                         </div>
                     </div>
                     <div class="inner cover">
                         <h1 class="cover-heading">叶串2015</h1>
-                        <p class="lead"> Lorem Ipu solum</p>
-                        <p class="lead"><a href="#" class="btn btn-lg btn-default" id="fullscreen">开始弹幕</a></p>
-                        <a class="btn btn-default" href="#" role="button" id="danmu-start">Start</a>
-                        <a class="btn btn-default" href="#" role="button" id="danmu-go">Go</a>
+                        <p class="lead">国初华会荣誉呈现</p>
+
+                    </div>
+                    <img id="board-logo" src="{{ url_for("static",filename="images/logo_black.png") }}">
+                    <div class="url-footer">
+                        <h3>弹幕吐槽在这里: tinyurl.com/yechuan15danmu</h3>
                     </div>
 
+
                     <div id="danmuholder"><div id="danmu"></div></div>
-                    <style>
-                        div#danmuholder {
-                            position: absolute;
-                            left:0px;
-                            top:0px;
-                            background-color: black;
-                            height:100%;
-                            width:100%;
-                            display: none;
-                        }
-                        div#danmu{
-                            background-color: black;
-                        }
-                    </style>
                     <div class="mastfoot">
                         <div class="inner">
-                            <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                            <p><i class="fa fa-code"></i> with <i class="fa fa-heart"></i> by Luo Yicheng</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -80,110 +58,48 @@
 {#        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>#}
         <script type="text/javascript" src="//code.jquery.com/jquery-1.4.4.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script type="text/javascript" src="{{url_for('static',filename='danmu/jquery.danmu.js') }}"></script>
-        <script type="text/javascript">
-            $(document).ready(function() {
-
-            var danmuss = {
-                1: [{"text": "哈哈哈", "color": "red", "size": "0", "position": "0"},
-                    {"text": "233333", "color": "red", "size": "0", "position": "0"}],
-                3: [{"text": "poi", "color": "red", "size": "1", "position": "0"},
-                    {"text": "2333", "color": "#FFFFFF", "size": "0", "position": "0"}],
-                10: [{"text": "XXX真好", "color": "#FFFFFF", "size": "0", "position": "2"}]
-            };
-            // settings for the Danmu Player
-            var options = {
-                left: 0,
-                top: 0,
-                height: screen.height,
-                width: screen.width,
-                zindex: 100,
-                speed: 20000,
-                sumtime: 900,
-                danmuss: danmuss,
-                default_font_color: "#FFFFFF",
-                font_size_small: 30,
-                font_size_big: 50,
-                opacity: "0.9",
-                top_botton_danmu_time: 6000
-            };
-
-
-            $("#danmu").danmu(options);
-
-            var danmuPlayer = $('#danmu');
-
-            $('#danmu-start').click(function(){
-               $("#danmu").danmu('danmu_start');});
-
-            $('#danmu-go').click(function(){
-                show_danmu(danmuPlayer,'heoolow');
-            });  //todo
-
-            $('#fullscreen').click(function(){
-                $('#danmuholder').css({"display":"block"});
-                document.getElementById('danmuholder').webkitRequestFullScreen();
-            });
-
-            function show_danmu(danmuPlayer,msg){
-                var heig=danmuPlayer.height();
-	            var row_conut=parseInt(heig/options.font_size_big);
-                var row = parseInt(row_conut*Math.random());
-                var top_local=(row)*options.font_size_big;
-
-                var a_danmu="<div class='flying flying2' id='linshi'></div>";
-                danmuPlayer.append(a_danmu);
-                fly_tmp_name = "fly"+parseInt(heig*Math.random()).toString();
-
-                $("#linshi").attr("id",fly_tmp_name);
-
-                $("#"+fly_tmp_name).text(msg);
-                $("#"+fly_tmp_name).css({"position":"absolute"
-                                            ,"top":top_local
-                                            ,"left":options.width
-                                            ,"font-size":options.font_size_big
-                                            ,"white-space":"nowrap"
-                                 });
-                $("#"+fly_tmp_name).animate({left:-danmuPlayer.width()*3},options.speed
-                    ,function(){$(this).remove();})
-            }
-
-            namespace = '/test'; // change to an empty string to use the global namespace
-
-            // the socket.io documentation recommends sending an explicit package upon connection
-            // this is specially important when using the global namespace
-            var socket = io.connect('https://' + document.domain + ':' + location.port + namespace);
-            socket.on('connect', function() {
-                console.log('connected');
-            });
-            socket.on('disconnect',function(){
-                console.log('disconnected');
-            })
-            // event handler for server sent data
-            // the data is displayed in the "Received" section of the page
-            socket.on('post danmu', function(msg) {
-                console.log('received!');
-                $('#board').append('<br>Received #'+ msg.data);
-                var dm = { "text":msg['data'],
-                           "color":"white",
-                           "size":"1",
-                           "position":"0",
-                           "time": $('#danmu').data('nowtime')};
-                show_danmu(danmuPlayer,msg.data);
-            });
-        });
-    </script>
     <script type="text/javascript" src="{{url_for('static',filename='jquery.hotkeys.js') }}"></script>
-    <script tyep="text/javascript">
+    <!-- Script for keyboard shortcut -->
+    <script type="text/javascript">
         $(document).ready(function(){
             $(document).bind('keydown', 'd', function(){
-                console.log('keydown');
-{#                enterFullScreen();#}
-                $('#danmuholder').fadeToggle("slow");
+                if ($('#danmuholder').css("display") == 'none'){
+                $('#danmuholder').fadeIn("slow",function(){
+                    $("#board-logo").fadeIn("slow", function(){
+                        $(".url-footer").fadeIn("slow");
+                    });
+                });}
+                else {
+                    $("#board-logo").fadeOut("slow",function(){
+                        $('#danmuholder').fadeOut("slow");
+                    });
+                    $(".url-footer").fadeOut("slow");
 
-        });
+                }
+
+            });
+
+            $(document).bind('keydown', 'n', function() {
+                $(".url-footer").fadeToggle("slow");
+            });
+
+            $(document).bind('keypress', 'j', function() {
+                console.log('pressed');
+                $("#danmu").animate({backgroundColor:"rgba(0,0,0,1)"},600);
+            });
+
+            $(document).bind('keypress', 'k', function() {
+                console.log("pressed");
+                $("#danmu").animate({backgroundColor:"rgba(0,0,0,0.5)"},600);
+            });
+
+
         })
     </script>
+    <!-- Script for Socket.IO and Danmu-->
     <script type="text/javascript">
         $(document).ready(function() {
 
@@ -205,27 +121,18 @@
                 sumtime: 900,
                 danmuss: danmuss,
                 default_font_color: "#FFFFFF",
-                font_size_small: 30,
-                font_size_big: 50,
-                opacity: "0.9",
+                font_size_small: 50,
+                font_size_big: 70,
+                opacity: 1.0,
                 top_botton_danmu_time: 6000
             };
 
+            function randomChoice(arr) {
+               return arr[Math.floor(arr.length * Math.random())];
+            }
 
             $("#danmu").danmu(options);
-
             var danmuPlayer = $('#danmu');
-
-            $('#danmu-start').click(function(){
-               $("#danmu").danmu('danmu_start');});
-
-            $('#danmu-go').click(function(){
-                show_danmu(danmuPlayer,'heoolow');
-            });  //todo
-
-            $('#fullscreen').click(function(){
-                document.getElementById('danmuholder').webkitRequestFullScreen();
-            });
 
             function show_danmu(danmuPlayer,msg){
                 var heig=danmuPlayer.height();
@@ -243,8 +150,10 @@
                 $("#"+fly_tmp_name).css({"position":"absolute"
                                             ,"top":top_local
                                             ,"left":options.width
-                                            ,"font-size":options.font_size_big
+                                            ,"font-size":randomChoice([50,60,70])
                                             ,"white-space":"nowrap"
+                                            ,"color":"white"
+{#                                            ,"opacity":1.0#}
                                  });
                 $("#"+fly_tmp_name).animate({left:-danmuPlayer.width()*3},options.speed
                     ,function(){$(this).remove();})
@@ -253,24 +162,25 @@
             namespace = '/test'; // change to an empty string to use the global namespace
 
             // the socket.io documentation recommends sending an explicit package upon connection
-            // this is specially important when using the global namespace
-            var socket = io.connect('https://' + document.domain + ':' + location.port + namespace);
+            var socket = io.connect('//' + document.domain + ':' + location.port + namespace);
             socket.on('connect', function() {
                 console.log('connected');
             });
             socket.on('disconnect',function(){
                 console.log('disconnected');
             })
+
+
             // event handler for server sent data
-            // the data is displayed in the "Received" section of the page
             socket.on('post danmu', function(msg) {
                 console.log('received!');
                 $('#board').append('<br>Received #'+ msg.data);
                 var dm = { "text":msg['data'],
                            "color":"white",
-                           "size":"1",
+                           "size":randomChoice(["0","1"]),
                            "position":"0",
                            "time": $('#danmu').data('nowtime')};
+
                 show_danmu(danmuPlayer,msg.data);
             });
         });
