--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>叶串之声2015</title>
+    <title>叶串之声2015 | 主页</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="inner cover">
-                    <h1 class="cover-heading">叶串2015</h1>
+                    <h1 class="cover-heading">叶串之声2015</h1>
                     <p class="lead">国初华会荣誉呈现</p>
                 </div>
                 <img id="board-logo" src="{{ url_for('static',filename='images/logo_black.png')}}">
@@ -93,7 +93,7 @@
             $(document).bind('keypress', 'k', function() {
                 console.log("pressed");
                 $("#danmu").animate({
-                    backgroundColor: "rgba(0,0,0,0.5)"
+                    backgroundColor: "rgba(0,0,0,0.7)"
                 }, 600);
             });
 
