--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -38,7 +38,7 @@ body {
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   background-image: url("/static/images/yechuan2.png");
-  /*background-size: 100% 100%;*/
+  background-size: 100% 100%;
   display: table;
   width: 100%;
   height: 100%; /* For at least Firefox */
