--- a/templates/check.html
+++ b/templates/check.html
@@ -5,14 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>New page</title>
-{#        <link href="css/style.css" rel="stylesheet">#}
+        <title>Danmu Check</title>
         <script type="text/javascript" src="//code.jquery.com/jquery-1.4.4.min.js"></script>
         <!-- Use a version of Socket.io compatible with Flask extension -->
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
         <script type='text/javascript' src='/static/danmu/danmu_check.js'></script>
         <script type="text/javascript" src="{{url_for('static',filename='jquery.hotkeys.js') }}"></script>
-
     </head>
     <body>
         <table>
@@ -22,8 +20,7 @@
                 </tr>
             </thead>
             <tbody id='msg-queue'>
-                <tr>
-                </tr>
+                <tr></tr>
             </tbody>
         </table>
     </body>
