link About to my Github Repository

--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -43,7 +43,7 @@
     </div>
     <footer class="navbar-fixed-bottom">
         <div class="container">
-            <a href="http://google.com" title="About">About</a>
+            <a href="https://github.com/ethanluoyc/yechuandanmu" title="About">About</a>
             <span class="text-nowrap pull-right"><i class="fa fa-code"></i> with <i class="fa fa-heart" style="color:#ff4f33"></i></span>
         </div>
     </footer>
