--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -37,7 +37,7 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  background-image: url("/static/images/yechuan2.png");
+  background-image: url("/static/images/yechuan.png");
   background-size: 100% 100%;
   display: table;
   width: 100%;
@@ -222,7 +222,7 @@ height: 100%;
 /*z-index: 20;*/
 -webkit-transform: translateX(-50%) translateY(-50%);
 transform: translateX(-50%) translateY(-50%);
-background:  url("/static/images/yechuan2.png") no-repeat;
+background:  url("/static/images/yechuan.png") no-repeat;
 background-size: cover;
 }
 
