--- a/templates/check.html
+++ b/templates/check.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="{{ url_for('static', filename='lib/react/react.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='lib/react/react-dom.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='lib/socket.io-client/socket.io.js') }}"></script>
-  <script type='text/babel' src="{{ url_for('static', filename='js/danmu_check.jsx') }}"></script>
+  <script type='text/babel' src="{{ url_for('static', filename='js/build/danmu_check.js') }}"></script>
 </head>
 
 <body>
