--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>叶串之声2016 | 主页</title>
+    <title>叶串之声{{config['YEAR']}} | 主页</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -55,6 +55,6 @@
     <!-- jQuery Hotkey -->
     <script type="text/javascript" src="{{url_for('static',filename='lib/jquery.hotkeys/jquery.hotkeys.js') }}"></script>
     <!-- Script for Socket.IO and Danmu-->
-    <script type="text/javascript" src="{{url_for('static',filename='js/danmu.js') }}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='js/build/danmu.js') }}"></script>
   </body>
 </html>
