--- a/templates/check.html
+++ b/templates/check.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src="{{ url_for('static', filename='lib/react/react-dom.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='lib/socket.io-client/socket.io.js') }}"></script>
   <script type='text/babel' src="{{ url_for('static', filename='js/build/danmu_check.js') }}"></script>
+  <!-- Custom styles for this template -->
+  <link href="{{url_for('static',filename='css/cover.css')}}" rel="stylesheet">
 </head>
 
 <body>
