--- a/templates/check.html
+++ b/templates/check.html
@@ -15,13 +15,13 @@
   <script type="text/javascript" src="{{ url_for('static', filename='lib/socket.io-client/socket.io.js') }}"></script>
   <script type='text/babel' src="{{ url_for('static', filename='js/build/danmu_check.js') }}"></script>
   <!-- Custom styles for this template -->
-  <link href="{{url_for('static',filename='css/cover.css')}}" rel="stylesheet">
+  <link href="{{url_for('static',filename='css/check.css')}}" rel="stylesheet">
 </head>
 
 <body>
   <div id="board"></div>
 </body>
-<footer style="position:absolute;bottom:0;">
+<footer style="position:relative;bottom:0;">
   <p>Use left arrow to disprove Danmaku
     <br> right arrow to approve Danmaku</p>
 </footer>
